--- a/kw_library/views/book.xml
+++ b/kw_library/views/book.xml
@@ -7,6 +7,7 @@
             <tree>
                 <field name="name"/>
                 <field name="isbn"/>
+                <field name="author_ids" widget="many2many_tags"/>
             </tree>
         </field>
     </record>
@@ -21,6 +22,7 @@
                     <group>
                         <field name="name"/>
                         <field name="isbn"/>
+                        <field name="author_ids" widget="many2many_tags"/>
                     </group>
                 </sheet>
             </form>
