--- a/kw_library/views/book.xml
+++ b/kw_library/views/book.xml
@@ -7,6 +7,7 @@
             <tree>
                 <field name="name"/>
                 <field name="isbn"/>
+                <field name="category_id" widget="many2many_tags"/>
                 <field name="author_ids" widget="many2many_tags"/>
             </tree>
         </field>
@@ -22,6 +23,7 @@
                     <group>
                         <field name="name"/>
                         <field name="isbn"/>
+                        <field name="category_id" widget="many2many_tags"/>
                         <field name="author_ids" widget="many2many_tags"/>
                     </group>
                 </sheet>
